--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	Excerpts From Select Public Domain Books
+	<title>Excerpts From Select Public Domain Books</title>
+	<h1>Excerpts From Select Public Domain Books</h1>
 </head>
 <body>
 	<table>
