--- a/index.html
+++ b/index.html
@@ -82,12 +82,11 @@
 			<strong>Text excerpts from: <a href="http://www.gutenberg.org" target="_blank">Project Gutenberg</a></strong>
 		</p>
 		<p>
-			<strong>
 			<ul>	
-				<li>Joseph Barron</li>
+				<li><strong>Joseph Barron</li>
 				<li>ITMD-361</li>
-				<li>Lab 3</li>
+				<li>Lab 3</strong></li>
 			</ul>
-			</strong>
+		</p>
 	</body>
 </html>
